deployment/k8s/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecomm-api
  namespace: westbay-ecommerce
  labels:
    app: ecomm-api
    app.kubernetes.io/name: ecomm-api
    app.kubernetes.io/part-of: westbay-ecommerce
spec:
  type: ClusterIP
  selector:
    app: ecomm-api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
